Fix navbar color and bg bug!
Fixed bug which made background not aligned to viewport
Bg was right aligned and user had to scroll to right to see all img
Bug fixed by adding padding & margin 0px in index.scss to container

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
+
+.container {
+  padding-left: 0px;
+  margin-left: 0px;
+}
